// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/appointments DELETE / /:appointmentId - delete appointment 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/appointments DELETE / /:appointmentId - delete appointment then undelete it 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPms": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments GET / / - retrieve appointments - pms not synced 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentCodes": Array [],
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
      "type": "appointment",
    },
  ],
}
`;

exports[`/api/appointments GET / / - retrieve appointments - return nothing - pms not synced 1`] = `
Object {
  "entities": Object {},
  "result": Array [],
}
`;

exports[`/api/appointments GET / / - retrieve appointments 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;

exports[`/api/appointments GET / /:appointmentId - retrieve an appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments GET /insights /insights - appointment insights 1`] = `
Object {
  "insights": Array [
    Object {
      "type": "missingMobilePhone",
      "value": null,
    },
    Object {
      "type": "missingEmail",
      "value": null,
    },
  ],
}
`;

exports[`/api/appointments POST / / - create a Cancel - only isCancelled field should be true not isShortCancelled 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": true,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments POST / / - create a short Cancel - both cancelled fields should be true 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": true,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": true,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments POST / / - create an appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments POST / /connector/batch - 1 invalid appointment, 3 valid appointments 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "04148c65-292d-4d06-8801-d8061cec7b12": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "04148c65-292d-4d06-8801-d8061cec7b12",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
      "bd7a83d3-c1f2-40c5-8cb9-7e3b4362194a": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "bd7a83d3-c1f2-40c5-8cb9-7e3b4362194a",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
      "f3905556-45f7-406d-ba5a-dabe02288665": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "f3905556-45f7-406d-ba5a-dabe02288665",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
}
`;

exports[`/api/appointments POST / /connector/batch - 4 appointments created successfully 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "04148c65-292d-4d06-8801-d8061cec7b12": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "04148c65-292d-4d06-8801-d8061cec7b12",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
      "6ee224d6-8e66-4cb8-9d41-8964a3d9b909": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6ee224d6-8e66-4cb8-9d41-8964a3d9b909",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
      "bd7a83d3-c1f2-40c5-8cb9-7e3b4362194a": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "bd7a83d3-c1f2-40c5-8cb9-7e3b4362194a",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
      "f3905556-45f7-406d-ba5a-dabe02288665": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "f3905556-45f7-406d-ba5a-dabe02288665",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": null,
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
}
`;

exports[`/api/appointments PUT / /:appointmentId - update appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments PUT / /batch - update 1 appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;

exports[`/api/appointments PUT / /connector/batch - update 1 appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-12-31T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isMissed": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isRecall": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "originalDate": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-12-31T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;
